Bug 526934 - Can't launch "JUnit plug-in test" with Java 9
Change-Id: Ie691217110b15daff7fc7b6de93c2e88b91d4e63
Signed-off-by: Vikas Chandra <Vikas.Chandra@in.ibm.com>